[package]
name = "one_at_a_time_please"
version = "1.0.0"
edition = "2021"
keywords = ["thread", "mutex", "once", "called", "rwlock"]
categories = ["concurrency"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
license = "MIT"
description = "For serialising calls to functions"
repository = "https://github.com/JosephLenton/one_at_a_time_please"
documentation = "https://docs.serde.rs/one_at_a_time_please/"

[dependencies]
parking_lot = "0.12.1"
one_at_a_time_please_derive = "1.0.0"
